# fml

./: .gitignore  CMakeLists.txt  README.md
fml/: CMakeLists.txt  core.hpp  fml.hpp  main.cpp
fml/core/: CMakeLists.txt
fml/core/log/: CMakeLists.txt  log.hpp
fml/core/manipulate/: CMakeLists.txt  ground_truth.hpp
fml/core/math/: CMakeLists.txt  normalize.hpp
fml/core/optimizers/: CMakeLists.txt
fml/core/optimizers/gradient_descent/: CMakeLists.txt  gradient_descent.cpp  gradient_descent.hpp  gradient_descent_impl.hpp
fml/core/optimizers/problems/: CMakeLists.txt  gradient_descent_test_function.hpp  sgd_test_function.hpp
fml/core/optimizers/sgd/: CMakeLists.txt  sgd.cpp  sgd.hpp  sgd_impl.hpp
fml/core/util/: log.hpp
fml/methods/: CMakeLists.txt
fml/methods/linear_regression/: CMakeLists.txt  linear_regression.cpp  linear_regression.hpp  linear_regression_function.cpp  linear_regression_function.hpp  linear_regression_function_impl.hpp  linear_regression_impl.hpp
fml/methods/linear_svm/: CMakeLists.txt  linear_svm_function.hpp  linear_svm_function_impl.hpp
fml/methods/logistic_regression/: CMakeLists.txt  logistic_regression.cpp  logistic_regression.hpp  logistic_regression_function.cpp  logistic_regression_function.hpp  logistic_regression_function_impl.hpp  logistic_regression_impl.hpp
fml/methods/optimizer/: CMakeLists.txt
fml/methods/optimizer/gradient_descent/: CMakeLists.txt  gradient_descent.cpp  gradient_descent.hpp  gradient_descent_impl.hpp
fml/methods/optimizers/: CMakeLists.txt
fml/methods/optimizers/gradient_descent/: gradient_descent.hpp
fml/methods/optimizers/sgd/: CMakeLists.txt
fml/methods/softmax_regression/: CMakeLists.txt  softmax_regression_function.hpp  softmax_regression_function_impl.hpp
fml/tests/: CMakeLists.txt  gradient_descent_test.cpp  linear_regression_test.cpp  linear_svm_test.cpp  logistic_regression_test.cpp  main.cpp  sgd_test.cpp  softmax_regression_test.cpp
fml/tests/data/: in.csv  iris.csv  logistictest.csv  res.csv
fml/tests/util/: test_function.hpp
include/: fml.hpp
include/fml-bits/LinearSVM/: linear_svm_function.hpp  linear_svm_impl.hpp
include/fml-bits/linear_regression/: linear_regression.cpp  linear_regression.hpp  linear_regression_function.cpp  linear_regression_function.hpp
include/fml-bits/linear_svm/: linear_svm.hpp  linear_svm_function.hpp  linear_svm_function_impl.hpp
include/fml-bits/optimizers/sgd/: sgd.hpp  sgd_impl.hpp  sgd_test_function.hpp  sgd_test_function_impl.hpp
src/fml/: fml.hpp
src/fml/core/util/: CMakeLists.txt
src/fml/methods/: CMakeLists.txt
src/fml/methods/linear_regression/: CMakeLists.txt
src/fml/methods/optimizers/sgd/: sgd_test_function_impl.hpp
src/fml/tests/: CMakeLists.txt
tests/: CMakeLists.txt  linear_regression_test.cpp  linear_svm_test.cpp  main.cpp  sgd_test.cpp
